# correlation_timing

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
notebooks/: Timings V1.ipynb  Timings.ipynb
src/correlation_timing/: analysis.py  data_preparation.py  hypothesis1.py  hypothesis2.py  main.py  plotting.py  utils.py
src/ct/: __main__.py  analysis.py  data_preparation.py  hypothesis1.py  hypothesis2.py  plotting.py
tests/: test_utils.py
