[project]
name = "correlation-timing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "heinerlehr", email = "heiner.lehr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.17",
    "iconfig",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "orjson>=3.11.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
iconfig = { path = "../../iconfig", editable = true }
